# ChangeLog for sci-astronomy/idlastro
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/idlastro/ChangeLog,v 1.3 2012/02/15 16:58:40 bicatali Exp $

*idlastro-20120206 (15 Feb 2012)

  15 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org>
  -idlastro-20111226.ebuild, -idlastro-20120120.ebuild,
  +idlastro-20120206.ebuild:
  Version bump

*idlastro-20120120 (01 Feb 2012)

  01 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +idlastro-20120120.ebuild:
  Version bump

*idlastro-20111226 (29 Dec 2011)

  29 Dec 2011; Sébastien Fabbro <bicatali@gentoo.org>
  +idlastro-20111226.ebuild, +metadata.xml:
  Initial import
