@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST idlastro-20120206.tar.gz 1336433 RMD160 69d4d136122f337c503725368e3d3a9c7adae4da SHA1 1d107458299da4853a5b77bb5c6e29bf7bed269a SHA256 86f74f704e905a63f33987cd2dd0a58d115b70d820586513b251d3f88d5cd7cf
+DIST idlastro-20120502.tar.gz 1347123 RMD160 8cbe45e1a0d51cb5f428bd69ba0c47b0a0c943b8 SHA1 a5c28cac3da32bb44111dabd58e0ccc2aa4aa742 SHA256 7bc02523651c9744397d6c1a6f9a88a2913d88bb45f9af16e24a0ebe1e90ede0
 EBUILD idlastro-20120206.ebuild 607 RMD160 91fab6c9232423e0912816be0197821966cc097d SHA1 5deb39ddf64f3d1a34f8e961ece1ab885f6f2023 SHA256 8e6d82b7d4426f87128da77766a2db2d8db7ef5e5476773ebd3b7690dd66ed26
-MISC ChangeLog 694 RMD160 7bd18c9ec2a3d9b154f857322e9f6217e1b75843 SHA1 384632ceb52d0df40373e3b558abe98c726a411f SHA256 ca29377cb16bd122c9d9086268016fb1cc011e5c9cfe2dc9304bd132adc3fb56
+EBUILD idlastro-20120502.ebuild 607 RMD160 05c4bfcc8c62202b4e41ebf8b2f47c9bd36a87f9 SHA1 a9c4fbafb7fbadd3275e70074e5ab22dff1794f4 SHA256 ba827063fecbc40c5e817b969c08d9250a474ce960e35e4143dc84ea172ea6c5
+MISC ChangeLog 828 RMD160 cc6f02445213ec7d99cb7f9d1e566a7fac3a8d1d SHA1 4f42f8b6bab9738db12f824b95e5b7e52f548b1b SHA256 03dc8c3b192328f78f543d6b180929a2a3ae2d5318ff473296fc5b4b21086525
 MISC metadata.xml 661 RMD160 e353ce564b0163892738fa3baaa21ce729ad4c9a SHA1 d752b78fc76785b50cb10cca014d6393a2a19c79 SHA256 23100ecce36df42dc3cce4a3810eacdd128662fc845a8d831bb65809a7523ee9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk875GEACgkQ1ycZbhPLE2AS0wCgkuJABtfraRsTOYo79+pPEjMl
-CNMAnRsi7Av8UqdQ8ygEPklguBCLkuDF
-=uXw9
+iEYEARECAAYFAk+tSQgACgkQ1ycZbhPLE2DpYgCeKRlDI3pYJnOoPy2y9ciQw0dq
+g6UAn3nf+oQYiQxD5okOySJ7NYfTvpZO
+=TGMe
 -----END PGP SIGNATURE-----
