@@ -1,6 +1,12 @@
 # ChangeLog for sci-astronomy/idlastro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/idlastro/ChangeLog,v 1.3 2012/02/15 16:58:40 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/idlastro/ChangeLog,v 1.4 2012/05/11 17:12:57 bicatali Exp $
+
+*idlastro-20120502 (11 May 2012)
+
+  11 May 2012; Sébastien Fabbro <bicatali@gentoo.org>
+  +idlastro-20120502.ebuild:
+  Version bump
 
 *idlastro-20120206 (15 Feb 2012)
 
